M8: v1.0.0 release prep — docs, CI, version lock
- rustdoc builds warning-free; CI enforces it (-D warnings)
- README: verified standalone-agent production runbook
- CI runs the full bridge suite (build.sh) instead of M0/M1 only
- all crates + mod_version locked to 1.0.0; CHANGELOG.md added